--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -1,4 +1,4 @@
-<% layout("views/layouts/boilerPlate.ejs") %>
+<% layout("/layouts/boilerPlate") %>
 <body>
 <h3>All Listing</h3>
 <button><a href="/listings/new">Add New Listing</a></button>
