--- a/views/listing/update.ejs
+++ b/views/listing/update.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Data</title>
-</head>
+<%- layout('/layouts/boilerPlate')  %>
 <body>
     <h2>Update Listing:</h2>
     <form action="/listings/<%= data._id %>?_method=PUT" method="post">
@@ -17,4 +11,3 @@
         <button>Edit</button>
     </form>
 </body>
-</html>
