--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listing Data</title>
-</head>
+<% layout("/layouts/boilerPlate") %>
+
 <body>
     <h3>Show Details:</h3>
     <ol>
@@ -17,4 +12,3 @@
     </ol>
     <button><a href="/listings">Back</a></button>
 </body>
-</html>
