--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WonderLust</title>
-</head>
+<% layout('./layouts/boilerplate') -%>
 <body>
     <h2>Listing Index:</h2>
     <form action="/listings/new" method="get">
@@ -21,4 +15,3 @@
     <% } %>        
     </ol>
 </body>
-</html>
