--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,13 @@
 <% layout('./layouts/boilerplate') -%>
 <body>
-    <h2>Listing Index:</h2>
-    <form action="/listings/new" method="get">
-        <button>Add New Listing</button>
-    </form>
-    <ol>
+    <h2>All Listings</h2>
+    <ul>
     <% for(let listing of allListing) {%>
         <li>
             <a href="/listings/<%= listing._id %>">
                 <%= listing.title %>
             </a>
-            <button><a href="/listings/<%= listing._id %>/edit">Edit</a></button>
     </li>
     <% } %>        
-    </ol>
+    </ul>
 </body>
