--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Listing</title>
-</head>
+<% layout('./layouts/boilerplate') -%>
+
 <body>
     <h2>Add new Listing:</h2>
     <form action="/listings" method="post">
@@ -17,4 +12,3 @@
         <button>Add</button>
     </form>
 </body>
-</html>
