--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,17 +1,47 @@
 <% layout('./layouts/boilerplate') -%>
 
 <body>
-    <h2>Update Listing:</h2>
-    <form action="/listings/<%= data._id %>?_method=PUT" method="post">
-        <input type="text" name="title" value="<%= data.title %>" ><br><br>
-        <textarea name="description" id="description" value="description" rows="7"><%= data.description %></textarea><br><br>
-        <input type="text" name="image" value=<%= data.image %>><br><br>
-        <input type="number" name="price" value=<%= data.price %>><br><br>
-        <input type="text" name="location" value=<%= data.location %>><br><br>
-        <input type="text" name="country" value=<%= data.country %>><br><br>
-        <button>Update</button>
-    </form><br>
-    <form action="/listings/<%= data._id %>?_method=DELETE" method="post">
-        <button>Delete</button>
-    </form>
+    <div class="row p-2 fs-5">
+        <div class="col-8 offset-2">
+            <h2>Update Listing:</h2>
+                <form action="/listings/<%= data._id %>?_method=PUT" method="post">
+                    <div class="title mb-3 pt-3">
+                        <label for="title" class="form-label">Title:</label>
+                        <input class="form-control" type="text" name="title" value="<%= data.title %>">
+                    </div>
+                    <div class="description mb-3">
+                        <label for="description" class="form-label fs-5">Description</label>
+                        <textarea class="form-control" name="description" id="description" rows='2'><%= data.description %></textarea> 
+                    </div>
+                    <div class="image mb-3">
+                        <label for="image" class="form-label fs-5">Image URL</label>
+                        <input class="form-control" type="text" name="image" value=<%= data.image %>>                        
+                    </div>
+                    <div class="row">
+                        <div class="price mb-3 col-md-4">
+                            <label for="price" class="form-label fs-5">Price</label>
+                            <input class="form-control" type="number" name="price" value=<%= data.price %>>
+                        </div>
+                        <div class="country mb-3 col-md-8">
+                            <label for="country" class="form-label fs-5">Couuntry</label>
+                            <input class="form-control" type="text" name="country" value=<%= data.country %>>                        
+                        </div>
+                    </div>
+                    
+                    <div class="location mb-3">
+                        <label for="location" class="form-label fs-5">Location</label>
+                        <input class="form-control" type="text" name="location" value=<%= data.location %>>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <form action="/listings/<%- data._id  %>?_method=PUT" method="post">
+                            <button class="btn btn-dark mb-4">Update</button>
+                        </form>
+                        <form action="/listings/<%= data._id %>?_method=DELETE" method="post">
+                            <button class="btn btn-danger mb-4 ps-3 pe-3"><i class="fa-solid fa-trash"></i></button>
+                        </form>
+                    </div>
+                </div>
+        </div>
+    </div>
+    
 </body>
