--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -6,15 +6,14 @@
 
 
     <h2>Create New Listing:</h2>
-
-        <form action="/listings" method="post">  
+        <form action="/listings" method="post" novalidate class="needs-validation">  
             <div class="mt-4 mb-4">
                 <label for="title" class="form-label fs-5">Title</label>
-                <input class="form-control" type="text" name="title" placeholder="Add a Title">                
+                <input class="form-control" type="text" name="title" placeholder="Add a Title" required>                
             </div>
             <div class="desciption mb-4">
                 <label for="description" class="form-label fs-5">Description</label>
-                <textarea name="description" class="form-control" id="description" placeholder="description"></textarea>                
+                <textarea name="description" class="form-control" id="description" placeholder="description" required></textarea>                
             </div>
             <div class="image mb-4">
                 <label for="image" class="form-label fs-5">Image URL</label>
@@ -23,17 +22,17 @@
             <div class="row">
                 <div class="price mb-4 col-md-4">
                     <label for="price" class="form-label fs-5">Price</label>
-                    <input class="form-control" type="number" name="price" placeholder="Add a price">
+                    <input class="form-control" type="number" name="price" placeholder="Add a price" required>
                 </div>
                 <div class="country mb-4 col-md-8">
                     <label for="country" class="form-label fs-5">Country</label>
-                    <input class="form-control" type="text" name="country" placeholder="Add a country">                
+                    <input class="form-control" type="text" name="country" placeholder="Add a country" required>                
                 </div>                
             </div>
 
             <div class="location mb-4">
                 <label for="location" class="form-label fs-5">Location</label>
-                <input class="form-control" type="text" name="location" placeholder="Add a location">
+                <input class="form-control" type="text" name="location" placeholder="Add a location" required>
             </div>
 
             <button class="add btn btn-dark mb-4">Add</button>
