handling syntax errors

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<div class="bottomFoot fixed-bottom">
+<div class="bottomFoot">
     <footer>
         <div class="left">
             <div>&copy; 2025 WonderLust,</div>
