--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
         <div class="card col-8 offset-2 fs-5">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end pt-3">
                 <form action="/listings" method="get">
-                    <button class="btn btn-secondary mb-4 pe-4 ps-4"><i class="fa-solid fa-arrow-left"></i></button>
+                    <button class="btn btn-secondary pe-4 ps-4"><i class="fa-solid fa-arrow-left"></i></button>
                 </form>
             </div>
             <h2><%= listingData.title %></h2>
@@ -22,9 +22,29 @@
             </div> 
             <div class="d-flex justify-content-between pt-4">
                 <form action="/listings/<%= listingData._id %>/edit" method="get">
-                    <button class="btn btn-primary mb-4 pe-3 ps-3">Edit</button>
+                    <button class="btn btn-primary pe-3 ps-3">Edit</button>
                 </form>
             </div>              
+        <hr>
+        <div class="col-8 offset-2 fs-5">
+            <h4>Leave a Review</h4>
+            <form action='/listings/<%= listingData._id  %>/review' method="post" novalidate class="needs-validation">
+                <div class="comment">
+                    <label for="comment" id="comment" class="form-label fs-5">Comment</label>
+                    <textarea name="review[comment]" id="comment" class="form-control" cols="10" rows="5" required></textarea>
+                    <div class="invalid-feedback">
+                        Please enter some comment for review
+                    </div>
+                </div>
+                <div class="rating">
+                    <label for="rating" id="rating" class="form-label fs-5">Rating</label>
+                    <input type="range" name="review[rating]" class="form-range" min="1" max="5" >
+                </div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
+        </div>
         </div>
     </div>
+    
+    
 </body>
