--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,11 +9,11 @@
     font-size: 1.25rem;
 }
 
-.fa-airbnb{
-    color :#fe424d;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: .35rem;
+.navbar-brand{
+    color :#fe424d !important;
+    font-size: 2.3rem;
+    /* font-weight: 400; */
+    letter-spacing: .05rem;
     margin-right: 2rem;
 }
 .add,.del{
