--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,9 +20,12 @@
                     </b>/night
                 </p>
             </div> 
-            <div class="d-flex justify-content-between pt-4">
+            <div class="d-flex pt-4">
                 <form action="/listings/<%= listingData._id %>/edit" method="get">
                     <button class="btn btn-primary pe-3 ps-3">Edit</button>
+                </form>
+                <form action="/listings/<%= listingData._id %>?_method=DELETE" method="post">
+                    <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3"><i class="fa-solid fa-trash"></i></button>
                 </form>
             </div>              
         <hr>
