--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ footer{
     margin: 3px;
     font-size: 1.8rem;
 }
-.card{
+.listing-card{
     border: none !important;
     margin-bottom: 2.5rem;
 }
