--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,7 +3,7 @@
     <h2 style="margin: 1rem 3rem;">All Listings</h2>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-xm-1 ps-5 pe-5 pt-2">
         <% for(let listing of allListing) {%>
-            <div class="card col">
+            <div class="listing-card col">
                 <a href="/listings/<%= listing._id %>" class="indexCard">
                     <img src="<%= listing. image %>" class="card-img-top" alt="..." style="height: 20rem;">
                     <div class="card-img-overlay">
