adding login and signin styling, functionality, and middlewares

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,11 @@ footer{
         max-height: 10vh;
     }
 }
-
+.user{
+    background-color: rgb(209, 209, 209);
+    border-radius: 3.5rem;
+    line-height: 3.5rem;
+}
 
 .left{
     display: flex;
