--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,13 +5,19 @@
         <div class="card listing-card col-8 offset-2 fs-5">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end pt-3">
                 <form action="/listings" method="get">
-                    <button class="btn btn-secondary pe-4 ps-4"><i class="fa-solid fa-arrow-left"></i></button>
+                    <button class="btn btn-secondary pe-4 ps-4">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </button>
                 </form>
             </div>
             <h2><%= listingData.title %></h2>
             <img src="<%= listingData.image %>" class="card-img-top show-img .img-fluid show-img" alt="listingImg">
             <div class="card-body col-8 pt-2">
+                <h5 class="card-title">
+                    Owned By: <i><%= listingData.owner.username %></i>
+                </h5>
                 <p class="card-text">
+                    <p class="card-text text-center"></p>
                     <%= listingData.description %> <br>
                     <b>Location: </b><%= listingData.location %> <br>
                     <b>Country:</b> <%= listingData.country %> <br>
@@ -20,6 +26,7 @@
                     </b>/night
                 </p>
             </div> 
+
             <div class="d-flex pt-4">
                 <form action="/listings/<%= listingData._id %>/edit" method="get">
                     <button class="btn btn-primary pe-3 ps-3">Edit</button>
@@ -27,7 +34,8 @@
                 <form action="/listings/<%= listingData._id %>?_method=DELETE" method="post">
                     <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3"><i class="fa-solid fa-trash"></i></button>
                 </form>
-            </div>              
+            </div>
+
         <hr>
         <div class="col-10 offset-1 fs-5 mb-2">
             <h4>Leave a Review</h4>
@@ -66,7 +74,9 @@
                             </div>
                             <p class="card-text"><%= review.comment %></p>
                             <form action="/listings/<%= listingData._id %>/review/<%= review._id %>?_method=DELETE" method="post">
-                                <button class="btn btn-dark ps-3 pe-3 ms-2"><i class="fa-solid fa-trash"></i></button>
+                                <button class="btn btn-dark ps-3 pe-3 ms-2">
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
                             </form>
                         </div>
                     </div>
