--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,7 +32,9 @@
                     <button class="btn btn-primary pe-3 ps-3">Edit</button>
                 </form>
                 <form action="/listings/<%= listingData._id %>?_method=DELETE" method="post">
-                    <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3"><i class="fa-solid fa-trash"></i></button>
+                    <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
                 </form>
             </div>
             <% } %>
@@ -83,8 +85,6 @@
                     </div>
                 <% } %>
             </div>
-          
         </div>
         </div>
     </div>
-</body>
