--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,90 +1,115 @@
 <% layout('./layouts/boilerplate') -%>
 
-<body>
-    <div class="row pt-1">
-        <div class="card listing-card col-8 offset-2 fs-5">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end pt-3">
-                <form action="/listings" method="get">
-                    <button class="btn btn-secondary pe-4 ps-4">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </button>
-                </form>
-            </div>
-            <h2><%= listingData.title %></h2>
-            <img src="<%= listingData.image %>" class="card-img-top show-img .img-fluid show-img" alt="listingImg">
-            <div class="card-body col-8 pt-2">
-                <h5 class="card-title">
-                    Owned By: <i><%= listingData.owner.username %></i>
-                </h5>
-                <p class="card-text">
+    <body>
+        <div class="row pt-1">
+            <div class="card listing-card col-8 offset-2 fs-5">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end pt-3">
+                    <form action="/listings" method="get">
+                        <button class="btn btn-secondary pe-4 ps-4">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </button>
+                    </form>
+                </div>
+                <h2>
+                    <%= listingData.title %>
+                </h2>
+                <img src="<%= listingData.image %>" class="card-img-top show-img .img-fluid show-img" alt="listingImg">
+                <div class="card-body col-8 pt-2">
+                    <h5 class="card-title">
+                        Owned By: <i>
+                            <%= listingData.owner.username %>
+                        </i>
+                    </h5>
+                    <p class="card-text">
                     <p class="card-text text-center"></p>
                     <%= listingData.description %> <br>
-                    <b>Location: </b><%= listingData.location %> <br>
-                    <b>Country:</b> <%= listingData.country %> <br>
-                    <b>
-                        &#8377;<%= listingData.price.toLocaleString('en-IN') %>
-                    </b>/night
-                </p>
-            </div> 
-            <% if(currentUser && listingData.owner._id.equals(currentUser._id)) {%>
-            <div class="d-flex pt-4">
-                <form action="/listings/<%= listingData._id %>/edit" method="get">
-                    <button class="btn btn-primary pe-3 ps-3">Edit</button>
-                </form>
-                <form action="/listings/<%= listingData._id %>?_method=DELETE" method="post">
-                    <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3">
-                        <i class="fa-solid fa-trash"></i>
-                    </button>
-                </form>
-            </div>
-            <% } %>
-            <hr>
-        <div class="col-10 offset-1 fs-5 mb-2">
-           <% if(currentUser){ %>
-            <h4>Leave a Review :</h4>
-            <form action='/listings/<%= listingData._id  %>/review' method="post" novalidate class="needs-validation">
-                <div class="name col-6 mb-3 mt-3">
-                    <div class="invalid-feedback">
-                        Please enter some Valid Name for review
+                        <b>Location: </b>
+                        <%= listingData.location %> <br>
+                            <b>Country:</b>
+                            <%= listingData.country %> <br>
+                                <b>
+                                    &#8377;<%= listingData.price.toLocaleString('en-IN') %>
+                                </b>/night
+                                </p>
+                </div>
+                <% if(currentUser && listingData.owner._id.equals(currentUser._id)) {%>
+                    <div class="d-flex pt-4">
+                        <form action="/listings/<%= listingData._id %>/edit" method="get">
+                            <button class="btn btn-primary pe-3 ps-3">Edit</button>
+                        </form>
+                        <form action="/listings/<%= listingData._id %>?_method=DELETE" method="post">
+                            <button class="btn btn-danger mb-4 ps-3 pe-3 ms-3">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </form>
                     </div>
-                </div>
-                <div class="comment mb-3">
-                    <label for="comment" id="comment" class="form-label fs-5">Comment</label>
-                    <textarea name="review[comment]" id="comment" class="form-control" cols="10" rows="5" required></textarea>
-                    <div class="invalid-feedback">
-                        Please enter some comment for review
-                    </div>
-                </div>
-                <div class="rating">
-                    <label for="rating" id="rating" class="form-label fs-5">Rating</label>
-                    <input type="range" name="review[rating]" class="form-range" min="1" max="5" >
-                </div>
-                <button class="btn btn-outline-dark">Submit</button>
-            </form>
-            <hr>
-            <% } %>
-        </div>
-      
-        <div class="displayReview offset-1">
-            <h4 class="mb-3 mt-2">Reviews:</h4>
-            <div class="row ">
-                <% for(review of listingData.reviews) {%>
-                    <div class="card col-5 pb-2 ps-1 ms-3 me-1 mb-2">
-                        <div class="card-body p-1">
-                            <div class="row">
-                                <h4 class="col-6 card-title m-1"><%= review.name %></h4>
-                                <p class="card-text"><%= review.rating %> stars</p>
-                            </div>
-                            <p class="card-text"><%= review.comment %></p>
-                            <form action="/listings/<%= listingData._id %>/review/<%= review._id %>?_method=DELETE" method="post">
-                                <button class="btn btn-dark ps-3 pe-3 ms-2">
-                                    <i class="fa-solid fa-trash"></i>
-                                </button>
-                            </form>
+                    <% } %>
+                        <hr>
+                        <div class="col-10 offset-1 fs-5 mb-2">
+                            <% if(currentUser){ %>
+                                <h4>Leave a Review :</h4>
+                                <form action='/listings/<%= listingData._id  %>/review' method="post" novalidate
+                                    class="needs-validation">
+                                    <div class="comment mb-3">
+                                        <label for="comment" id="comment" class="form-label fs-5">Comment:</label>
+                                        <textarea name="review[comment]" id="comment" class="form-control" cols="10"
+                                            rows="5" required></textarea>
+                                        <div class="invalid-feedback">
+                                            Please enter some comment for review
+                                        </div>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center mt-3">
+                                        <div class="rating">
+                                            <label for="rating" id="rating" class="form-label  fs-5">Rating:</label>
+                                            <fieldset class="starability-slot ms-2">
+                                                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No review[rating]." />
+                                                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                                <label for="first-rate1" title="Terrible">1 star</label>
+                                                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                                                <label for="first-rate2" title="Not good">2 stars</label>
+                                                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                                                <label for="first-rate3" title="Average">3 stars</label>
+                                                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                                                <label for="first-rate4" title="Very good">4 stars</label>
+                                                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                                                <label for="first-rate5" title="Amazing">5 stars</label>
+                                            </fieldset>
+                                        </div>
+                                        <button class="btn btn-outline-dark me-5">Submit</button>
+                                    </div>
+                                </form>
+                                <hr>
+                                <% } %>
                         </div>
-                    </div>
-                <% } %>
+
+                        <div class="displayReview offset-1">
+                            <h4 class="mb-3 mt-2">Reviews:</h4>
+                            <div class="row ">
+                                <% for(review of listingData.reviews) {%>
+                                    <div class="card col-5 pb-2 ps-1 ms-3 me-1 mb-2">
+                                        <div class="card-body p-1">
+                                            <div class="row">
+                                                <h4 class="col-6 card-title m-1">
+                                                    <%= review.name %>
+                                                </h4>
+                                                <p class="starability-result card-text"
+                                                    data-rating="<%= review.rating  %>">
+                                                </p>
+                                            </div>
+                                            <p class="card-text">
+                                                <%= review.comment %>
+                                            </p>
+                                            <form
+                                                action="/listings/<%= listingData._id %>/review/<%= review._id %>?_method=DELETE"
+                                                method="post">
+                                                <button class="btn btn-dark ps-3 pe-3 ms-2">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <% } %>
+                            </div>
+                        </div>
             </div>
         </div>
-        </div>
-    </div>
