saving images on cloud and showing image from cloud storage

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -21,7 +21,7 @@
                     </div>
                     <div class="image mb-3">
                         <label for="image" class="form-label fs-5">Image URL</label>
-                        <input class="form-control" type="text" name="image" value=<%= data.image %> required>                        
+                        <input class="form-control" type="file" name="image" value=<%= data.image.url %> required>                        
                     </div>
                     <div class="row">
                         <div class="price mb-3 col-md-4">
