--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,7 @@
                 <h2>
                     <%= listingData.title %>
                 </h2>
-                <img src="<%= listingData.image %>" class="card-img-top show-img .img-fluid show-img" alt="listingImg">
+                <img src="<%= listingData.image.url%>" class="card-img-top show-img .img-fluid show-img" alt="<%= listingData.image.filename %>">
                 <div class="card-body col-8 pt-2">
                     <h5 class="card-title">
                         Owned By: <i>
