adding filter feature

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/listings">
         <i class="fa-brands fa-airbnb"></i>
         <b>Wonderlust</b>
       </a>
@@ -10,32 +10,34 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/listings">All Listings</a>
-          <a class="nav-link" href="/listings/new">Add New Listing</a>
+        <div class="navbar-nav mt-1">
+          <a class="nav-link" href="/listings">Explore</a>
         </div>
-        <li class="nav-item dropdown me-5 ms-auto" style="list-style-type: none;">
-          <a class="nav-link dropdown-toggle fs-5 ps-4 pe-4 user" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+        <div class="right ms-auto d-flex justify-content-between">
+          <a class="nav-link me-5" href="/listings/new">Add New Listing</a>
+          <li class="nav-item dropdown me-5" style="list-style-type: none;">
+            <a class="nav-link dropdown-toggle fs-5 ps-4 pe-4 user" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+  
+              <% if(!isLogged){ %> 
+                <i class="fa-regular fa-user"></i>
+             <% }else{ %>
+                <%= currentUser.username[0].toUpperCase() %>
+             <% } %>
+              
+            </a>
+            <ul class="dropdown-menu ">
+              <% if(!currentUser){ %> 
+                <li><a class="dropdown-item pt-0" href="/signup">Sign up</a></li>
+                <li><a class="dropdown-item pt-0" href="/login">Log in</a></li>
+              <% }else{%> 
+              <li><a class="dropdown-item" ><i class="fa-regular fa-user me-2 "></i><%= currentUser.username %> </a></li> 
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item pt-0" href="/logout"><i class="fa-solid fa-right-from-bracket pe-2"></i>Log out</a></li>
+              <% } %>
+            </ul>
+          </li>
+        </div>
 
-            <% if(!isLogged){ %> 
-              <i class="fa-regular fa-user"></i>
-           <% }else{ %>
-              <%= currentUser.username[0].toUpperCase() %>
-           <% } %>
-            
-          </a>
-          <ul class="dropdown-menu ">
-            <% if(!currentUser){ %> 
-              <li><a class="dropdown-item pt-0" href="/signup">Sign up</a></li>
-              <li><a class="dropdown-item pt-0" href="/login">Log in</a></li>
-            <% }else{%> 
-            <li><a class="dropdown-item" ><i class="fa-regular fa-user me-2 "></i><%= currentUser.username %> </a></li> 
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item pt-0" href="/logout"><i class="fa-solid fa-right-from-bracket pe-2"></i>Log out</a></li>
-            <% } %>
-          </ul>
-        </li>
       </div>
     </div>
   </nav>
